# CubeTimer

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  project_mappings.imp
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  codeql.yml
app/: CMakeLists.txt  cubeTimer++.cpp
configured_files/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt  cube.cpp  cube.hpp  cubeStates.hpp  enum.hpp  foo.cpp  scrambler.hpp
src/EnumUtils/: CMakeLists.txt  enumUtils.hpp
src/EnumUtils/test/: CMakeLists.txt  enumUtilsTest.cpp
src/ppUtils/: CMakeLists.txt  ppUtils.hpp
src/ppUtils/test/: CMakeLists.txt  ppUtilsTest.cpp
src/test/: CMakeLists.txt  cubeTest.cpp  fooTest.cpp  scramblerTest.cpp
